--- a/Brown_bear.html
+++ b/Brown_bear.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 
-
-// МИШКА
+<html>
 <body background='https://img.goodfon.ru/wallpaper/nbig/b/7c/les-doroga-priroda-28.webp'>
 <font color='lightblue' face='segoe print'>
 
@@ -49,5 +49,6 @@
 
 </font>
 </body>
+</html>
 
 
